[metadata]
name = gsviz
version = 1.0.0
author = Kunal Kumar Sahoo
author_email = kunal.sahoo2003@gmail.com
description = A Python3 library for creating, searching, and visualizing random graphs using NetworkX and Matplotlib.
url=https://github.com/Kunal-Kumar-Sahoo/gsviz
project_urls = 
    Bug Tracker = https://github.com/Kunal-Kumar-Sahoo/gsviz/issues
    repository = https://github.com/Kunal-Kumar-Sahoo/gsviz
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src